MyDeveloperOrg/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ABC</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Applicant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inquiry</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The official plan or program the individual applies for. A lookup to Program with a filter criteria of Record Type = Academic Program.</description>
        <inlineHelpText>The official plan or program the individual applies for.</inlineHelpText>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities with Academic Program</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admit_Type__c</fullName>
        <description>The category the potential applicant falls into for recruitment segmentation (Ex: New student, Transfer student, etc.)</description>
        <label>Admit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Freshman</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with. Filtered to exclude the Administrative Account Record Type.</description>
        <inlineHelpText>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with.</inlineHelpText>
        <label>Affiliated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Affiliated Account)</relationshipLabel>
        <relationshipName>Affiliated_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>The external ID used by the application collection tool or database for matching to Applicant Opportunities. Only displays on the Applicant Opportunity page layout.</description>
        <inlineHelpText>The external ID used by the application collection tool or database for matching to Applicant Opportunities.</inlineHelpText>
        <label>Application Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_Date__c</fullName>
        <description>A date stamp (set by the Opportunity: Set Application Submitted Date workflow rule) to record when an Opportunity is converted from an Inquiry to an Applicant record type.</description>
        <inlineHelpText>The date when the Opportunity was converted from an Inquiry to an Applicant record type.</inlineHelpText>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>Returns the Career from the Academic Program if there is one, otherwise it returns the Career from the Recruitment Program if there is one. Used in building the Opportunity Key for the Interaction Processor to determine whether to create a new Opportunity or update an existing Opportunity.</description>
        <formula>/*If an Academic Program exists for the Opportunity, retrieve the associated Career from the Academic Program Account*/ 
IF(NOT(ISBLANK(Academic_Program__c)),TEXT(Academic_Program__r.Career__c), 

/*IF not, retrieve the associated Career from the Recruitment Program Account on the Opportunity*/ 
TEXT(Recruitment_Program__r.Career__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Career</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Connects this Opportunity to a Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Returns the Department from the Academic Program if there is one, otherwise it returns the Department from the Recruitment Program if there is one.</description>
        <formula>/*If an Academic Program exists for the Opportunity, retrieve the associated School/College from the Academic Program Account*/ 
IF(NOT(ISBLANK(Academic_Program__c)),(  Academic_Program__r.Department__r.Name  ), 

/*IF not, retrieve the associated School/College from the Recruitment Program Account on the Opportunity*/ 
(  Recruitment_Program__r.Department__r.Name  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>Displays the percentage to be subtracted from the total amount of the opportunity.</description>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <description>Calculates the opportunity amount after any discount has been applied.</description>
        <formula>Amount * (1 - Discount_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity amount after discount has been applied.</inlineHelpText>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Inquiry_Source__c</fullName>
        <description>Captures the first lead source when the opportunity record is created. This is set by the Opportunity: Set First Inquiry Source workflow rule.</description>
        <inlineHelpText>The first Lead Source of the Opportunity.</inlineHelpText>
        <label>First Inquiry Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recruitment_Program__c</fullName>
        <description>Captures the first Recruitment Program when the Opportunity record is created. This is set by the Opportunity: Set First Recruitment Program workflow rule.</description>
        <inlineHelpText>The first Recruitment Program on the Opportunity.</inlineHelpText>
        <label>First Recruitment Program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <description>A date stamp (set by the Opportunity: Set Inquiry Date workflow rule) to capture when an Opportunity is created.</description>
        <inlineHelpText>The date when the Opportunity was created.</inlineHelpText>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities from Latest Campaign Source</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Key__c</fullName>
        <description>A unique external ID text field which determines whether an Interaction will create a new Opportunity or edit an existing Opportunity. Built using the Contact’s 18-digit ID, Career, Term’s 15-digit ID, and Recruitment/Academic Program’s 15-digit ID (if applicable) to ensure uniqueness and support of both a central and decentral recruitment process. Set by the Interactions Processor.</description>
        <externalId>true</externalId>
        <label>Opportunity Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The marketable name for an official Academic Program (or group of Programs) that the individual is interested in. A lookup to Program with a filter criteria of Record Type = Recruitment Program. Used in building the Opportunity Key for the Interaction Processor to determine whether to create a new Opportunity or update an existing Opportunity for a decentralized recruitment process.</description>
        <inlineHelpText>The marketable name for an official Academic Program (or group of Programs) that the individual is interested in.</inlineHelpText>
        <label>Recruitment Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Recruitment Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities with Recruitment Program</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Applicant_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Applicant_Opportunity</value>
        </filters>
        <label>Applicant Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>High_Probability_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>Proposal/Price Quote,Negotiation/Review</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterOrEqual</operation>
            <value>50</value>
        </filters>
        <label>High Probability Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Inquiry_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Inquiry_Opportunity</value>
        </filters>
        <label>Inquiry Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Applicant_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Applicant</businessProcess>
        <label>Applicant Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inquiry_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Inquiry</businessProcess>
        <label>Inquiry Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>